--- a/03_Annotating_Images.ipynb
+++ b/03_Annotating_Images.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-03-29T19:17:41.382883Z",
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-03-29T19:17:41.398880Z",
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-03-29T19:17:49.560044Z",
@@ -92,15 +92,7 @@
         "id": "IN2OSkpgeyZ1",
         "outputId": "30929084-0362-4a8e-f551-a80d641ec5a5"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Downloading and extracting assets....Done\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "URL = r\"https://www.dropbox.com/s/48hboi1m4crv1tl/opencv_bootcamp_assets_NB3.zip?dl=1\"\n",
         "\n",
@@ -112,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 8,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-03-29T19:17:49.925053Z",
@@ -126,10 +118,10 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7febb98d8d50>"
+              "<matplotlib.image.AxesImage at 0x7fa148f1d490>"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -193,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 9,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-03-29T19:17:50.240034Z",
@@ -206,10 +198,10 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7febb8d193d0>"
+              "<matplotlib.image.AxesImage at 0x7fa148aad310>"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -276,7 +268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-03-29T19:17:50.557044Z",
@@ -289,10 +281,10 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7febb8caa990>"
+              "<matplotlib.image.AxesImage at 0x7fa148772510>"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -358,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 14,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-03-29T19:17:50.903028Z",
@@ -371,10 +363,10 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7febb4df7650>"
+              "<matplotlib.image.AxesImage at 0x7fa1483a76d0>"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -443,7 +435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 15,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-03-29T19:17:51.220033Z",
@@ -456,10 +448,10 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7febb4d7f7d0>"
+              "<matplotlib.image.AxesImage at 0x7fa147f40790>"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         },
