added folder-specific README

--- a/learnopencv/opencv_bootcamp_assets_NB1/01_Getting_Started_with_Images.ipynb
+++ b/learnopencv/opencv_bootcamp_assets_NB1/01_Getting_Started_with_Images.ipynb
@@ -7,7 +7,9 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/kiplimock/colab-notebooks/blob/main/01_Getting_Started_with_Images.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kiplimock/colab-notebooks/blob/main/learnopencv/opencv_bootcamp_assets_NB1/01_Getting_Started_with_Images.ipynb\" target=\"_parent\">\n",
+        "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
       ]
     },
     {
