--- a/learnopencv/opencv_bootcamp_assets_NB10/10_hdr.ipynb
+++ b/learnopencv/opencv_bootcamp_assets_NB10/10_hdr.ipynb
@@ -2,17 +2,22 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/kiplimock/colab-notebooks/blob/main/learnopencv/opencv_bootcamp_assets_NB10/10_hdr.ipynb\" target=\"_parent\">\n",
+        "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "069Tq96ie-54"
       },
       "source": [
         "# High Dynamic Range (HDR) Imaging\n",
         "\n",
-        "**Satya Mallick, LearnOpenCV.com**\n",
-        "\n",
-        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/kiplimock/colab-notebooks/blob/main/10_hdr.ipynb\">\n",
-        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
-        "</a>"
+        "**Satya Mallick, LearnOpenCV.com**"
       ]
     },
     {
