--- a/learnopencv/opencv_bootcamp_assets_NB2/02_Basic_Image_Manipulations_Crop_Resize_Flip_and_Modify_Pixels.ipynb
+++ b/learnopencv/opencv_bootcamp_assets_NB2/02_Basic_Image_Manipulations_Crop_Resize_Flip_and_Modify_Pixels.ipynb
@@ -2,6 +2,15 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/kiplimock/colab-notebooks/blob/main/learnopencv/opencv_bootcamp_assets_NB2/02_Basic_Image_Manipulations_Crop_Resize_Flip_and_Modify_Pixels.ipynb\" target=\"_parent\">\n",
+        "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "nQPJ3dLYYjVn"
       },
