--- a/learnopencv/opencv_bootcamp_assets_NB3/03_Annotating_Images.ipynb
+++ b/learnopencv/opencv_bootcamp_assets_NB3/03_Annotating_Images.ipynb
@@ -2,11 +2,20 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/kiplimock/colab-notebooks/blob/main/learnopencv/opencv_bootcamp_assets_NB3/03_Annotating_Images.ipynb\" target=\"_parent\">\n",
+        "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "0bDArSwJeyZh"
       },
       "source": [
-        "# <font style=\"color:black\">Annotating Images</font>\n",
+        "# <font style=\"color:orange\">Annotating Images</font>\n",
         "\n",
         "In this notebook we will cover how to annotate images using OpenCV. We will learn how to peform the following annotations to images.\n",
         "\n",
