coding the convolutional and depthwise blocks

--- a/semantic_segmentation_with_attention_unet.ipynb
+++ b/semantic_segmentation_with_attention_unet.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCGz3kBr90XJZKJidRcVtv",
+      "authorship_tag": "ABX9TyOMq2/MezpnrSiHsgXAOW2x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,6 +98,33 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Depthwise Block"
+      ],
+      "metadata": {
+        "id": "ffCssMt8vVzd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def depthwise_block(input, num_filters):\n",
+        "  d1 = tf.keras.layers.DepthwiseConv2D((3,3), padding='same', depthwise_initializer='he_normal')(input)\n",
+        "  d1 = tf.keras.layers.Conv2D(num_filters, (1, 1), strides=(1, 1), padding='same', kernel_initializer='he_normal')(d1)\n",
+        "  d1 = cbam(d1)\n",
+        "  d1 = tf.keras.layers.BatchNormalization()(d1)\n",
+        "  d1 = tf.keras.layers.Activation('relu')(d1)\n",
+        "\n",
+        "  return d1"
+      ],
+      "metadata": {
+        "id": "fQL163UMvYss"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Conv2D Block"
       ],
       "metadata": {
@@ -106,11 +133,25 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def conv2d_block(input, num_filters):\n",
+        "  d1 = depthwise_block(input, num_filters)\n",
+        "  d2 = depthwise_block(d1, num_filters)\n",
+        "  print(d2.shape)\n",
+        "\n",
+        "  shortcut = tf.keras.layers.Conv2D(num_filters, (1, 1), strides=(1, 1), padding='same', kernel_initializer='he_normal')(input)\n",
+        "  shortcut = tf.keras.layers.BatchNormalization()(shortcut)\n",
+        "  print(shortcut.shape)\n",
+        "\n",
+        "  out = tf.keras.layers.add([shortcut, d2])\n",
+        "  print(out.shape)\n",
+        "\n",
+        "  return out"
+      ],
       "metadata": {
         "id": "QbdcHIz5kefF"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -124,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 8,
       "metadata": {
         "id": "LHNSoJDMasI9"
       },
@@ -186,27 +227,36 @@
     {
       "cell_type": "code",
       "source": [
-        "inputs = Input(shape=(128, 128, 32))\n",
-        "cbam(inputs).shape"
+        "inputs = Input(shape=(128, 128, 3))\n",
+        "conv2d_block(inputs, 64).shape"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y6843i7-fWhU",
-        "outputId": "b4debfc3-8da3-4bf8-aa85-9c69a6b7a001"
+        "outputId": "e5eabedc-6dc0-43bf-b80f-4e08f92f4ab5"
       },
-      "execution_count": 7,
+      "execution_count": 41,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(None, 128, 128, 64)\n",
+            "(None, 128, 128, 64)\n",
+            "(None, 128, 128, 64)\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "TensorShape([None, 128, 128, 32])"
+              "TensorShape([None, 128, 128, 64])"
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 41
         }
       ]
     }
