--- a/semantic_segmentation_with_attention_unet.ipynb
+++ b/semantic_segmentation_with_attention_unet.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMq2/MezpnrSiHsgXAOW2x",
+      "authorship_tag": "ABX9TyPQxhKFsF1kype8PfRCLahX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,66 +92,7 @@
       "metadata": {
         "id": "D2aD5UG9c_Eu"
       },
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Depthwise Block"
-      ],
-      "metadata": {
-        "id": "ffCssMt8vVzd"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def depthwise_block(input, num_filters):\n",
-        "  d1 = tf.keras.layers.DepthwiseConv2D((3,3), padding='same', depthwise_initializer='he_normal')(input)\n",
-        "  d1 = tf.keras.layers.Conv2D(num_filters, (1, 1), strides=(1, 1), padding='same', kernel_initializer='he_normal')(d1)\n",
-        "  d1 = cbam(d1)\n",
-        "  d1 = tf.keras.layers.BatchNormalization()(d1)\n",
-        "  d1 = tf.keras.layers.Activation('relu')(d1)\n",
-        "\n",
-        "  return d1"
-      ],
-      "metadata": {
-        "id": "fQL163UMvYss"
-      },
-      "execution_count": 19,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Conv2D Block"
-      ],
-      "metadata": {
-        "id": "LmCePTdNkfGY"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def conv2d_block(input, num_filters):\n",
-        "  d1 = depthwise_block(input, num_filters)\n",
-        "  d2 = depthwise_block(d1, num_filters)\n",
-        "  print(d2.shape)\n",
-        "\n",
-        "  shortcut = tf.keras.layers.Conv2D(num_filters, (1, 1), strides=(1, 1), padding='same', kernel_initializer='he_normal')(input)\n",
-        "  shortcut = tf.keras.layers.BatchNormalization()(shortcut)\n",
-        "  print(shortcut.shape)\n",
-        "\n",
-        "  out = tf.keras.layers.add([shortcut, d2])\n",
-        "  print(out.shape)\n",
-        "\n",
-        "  return out"
-      ],
-      "metadata": {
-        "id": "QbdcHIz5kefF"
-      },
-      "execution_count": 40,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -160,16 +101,11 @@
         "### Attention Module"
       ],
       "metadata": {
-        "id": "kZaM9eJ1cQJS"
+        "id": "iM_AAMiBOUnw"
       }
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {
-        "id": "LHNSoJDMasI9"
-      },
-      "outputs": [],
       "source": [
         "\"\"\"\n",
         "Implementation of CBAM: Convolutional Block Attention Module in the TensorFlow 2.5.\n",
@@ -222,7 +158,68 @@
         "    x = channel_attention_module(x)\n",
         "    x = spatial_attention_module(x)\n",
         "    return x"
-      ]
+      ],
+      "metadata": {
+        "id": "3AP3TMZhOVtJ"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Depthwise Block"
+      ],
+      "metadata": {
+        "id": "ffCssMt8vVzd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def depthwise_block(input, num_filters):\n",
+        "  d1 = tf.keras.layers.DepthwiseConv2D((3,3), padding='same', depthwise_initializer='he_normal')(input)\n",
+        "  d1 = tf.keras.layers.Conv2D(num_filters, (1, 1), strides=(1, 1), padding='same', kernel_initializer='he_normal')(d1)\n",
+        "  d1 = cbam(d1)\n",
+        "  d1 = tf.keras.layers.BatchNormalization()(d1)\n",
+        "  d1 = tf.keras.layers.Activation('relu')(d1)\n",
+        "\n",
+        "  return d1"
+      ],
+      "metadata": {
+        "id": "fQL163UMvYss"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Conv2D Block"
+      ],
+      "metadata": {
+        "id": "LmCePTdNkfGY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def conv2d_block(input, num_filters):\n",
+        "  d1 = depthwise_block(input, num_filters)\n",
+        "  d2 = depthwise_block(d1, num_filters)\n",
+        "\n",
+        "  shortcut = tf.keras.layers.Conv2D(num_filters, (1, 1), strides=(1, 1), padding='same', kernel_initializer='he_normal')(input)\n",
+        "  shortcut = tf.keras.layers.BatchNormalization()(shortcut)\n",
+        "\n",
+        "  out = tf.keras.layers.add([shortcut, d2])\n",
+        "\n",
+        "  return out"
+      ],
+      "metadata": {
+        "id": "QbdcHIz5kefF"
+      },
+      "execution_count": 10,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -235,9 +232,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y6843i7-fWhU",
-        "outputId": "e5eabedc-6dc0-43bf-b80f-4e08f92f4ab5"
+        "outputId": "9cc73111-b65c-4c08-8fd4-bfca7b69881b"
       },
-      "execution_count": 41,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,7 +253,124 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Contraction Path"
+      ],
+      "metadata": {
+        "id": "BxaaEvlCPCWo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "IMG_HEIGHT = 224\n",
+        "IMG_WIDTH = 224\n",
+        "IMG_CHANNELS = 3"
+      ],
+      "metadata": {
+        "id": "bTgnKlHUQN9i"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# Building the model\n",
+        "input = tf.keras.layers.Input(shape=(IMG_HEIGHT, IMG_WIDTH, IMG_CHANNELS))\n",
+        "input = tf.keras.layers.Lambda(lambda x: x / 255.0)(input)"
+      ],
+      "metadata": {
+        "id": "xtEwdTIRP4DA"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# contraction path\n",
+        "c1 = conv2d_block(input, 64)\n",
+        "p1 = tf.keras.layers.MaxPool2D(pool_size=(2, 2))(c1)\n",
+        "\n",
+        "c2 = conv2d_block(p1, 128)\n",
+        "p2 = tf.keras.layers.MaxPool2D(pool_size=(2, 2))(c2)\n",
+        "\n",
+        "c3 = conv2d_block(p2, 256)\n",
+        "p3 = tf.keras.layers.MaxPool2D(pool_size=(2, 2))(c3)\n",
+        "\n",
+        "c4 = conv2d_block(p3, 512)\n",
+        "p4 = tf.keras.layers.MaxPool2D(pool_size=(2, 2))(c4)\n",
+        "\n",
+        "b5 = conv2d_block(p4, 1024)\n",
+        "d5 = tf.keras.layers.Dropout(0.3)(b5)"
+      ],
+      "metadata": {
+        "id": "K-7yPa6gQmqD"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<p align=\"center\">\n",
+        "  <img src=\"https://camo.githubusercontent.com/c40a3febddbb349098cf67e237a46f09489a098907772edc30619877f2980039/68747470733a2f2f64726976652e676f6f676c652e636f6d2f75633f6578706f72743d766965772669643d31307532665a6c2d4f4761364a45435f433852493038576933484356574f727057\" alt=\"model architecture\">\n",
+        "</p>"
+      ],
+      "metadata": {
+        "id": "fJ0sRFgBT7Uf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# expansion path\n",
+        "u6 = tf.keras.layers.Conv2DTranspose(512, (3, 3), strides=(2, 2), padding='same')(b5)\n",
+        "u6 = tf.keras.layers.concatenate([u6, c4])\n",
+        "# u6 shape = (None, 28, 28, 1024)\n",
+        "\n",
+        "u7 = depthwise_block(u6, 512)\n",
+        "u7 = tf.keras.layers.Conv2DTranspose(256, (3, 3), strides=(2, 2), padding='same')(u7)\n",
+        "u7 = tf.keras.layers.concatenate([u7, c3])\n",
+        "# u7 shape = (None, 56, 56, 512)\n",
+        "\n",
+        "u8 = depthwise_block(u7, 256)\n",
+        "u8 = tf.keras.layers.Conv2DTranspose(128, (3, 3), strides=(2, 2), padding='same')(u8)\n",
+        "u8 = tf.keras.layers.concatenate([u8, c2])\n",
+        "# u7 shape = (None, 112, 112, 256)\n",
+        "\n",
+        "u9 = depthwise_block(u8, 128)\n",
+        "u9 = tf.keras.layers.Conv2DTranspose(64, (3, 3), strides=(2, 2), padding='same')(u9)\n",
+        "u9 = tf.keras.layers.concatenate([u9, c1])\n",
+        "# u9 shape = (None, 224, 224, 128)\n",
+        "\n",
+        "u10 = depthwise_block(u9, 64)\n",
+        "u10 = tf.keras.layers.Conv2D(1, (3, 3), strides=(1, 1), padding='same', kernel_initializer='he_normal')(u10)\n",
+        "print(u10.shape)"
+      ],
+      "metadata": {
+        "id": "EAQd1TkoSJf3",
+        "outputId": "85e22cd2-56a4-40c1-bedb-6bfbed312282",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(None, 224, 224, 1)\n"
+          ]
         }
       ]
     }
